rebrand: Replace ownCloud branding with BauGPT
This commit implements a complete rebrand from ownCloud to BauGPT:

**Logo Assets**:
- Replace all SVG logos (wizard_logo, oc-image-about, owncloud-icon, etc.)
  with BauGPT robot character imagery
- Update all PNG icon files (16px-1024px) with BauGPT branding
- Update sidebar.svg with embedded BauGPT logo

**Branding Configuration** (OWNCLOUD.cmake):
- APPLICATION_NAME: "ownCloud" → "BauGPT"
- APPLICATION_EXECUTABLE: "owncloud" → "baugpt"
- APPLICATION_DOMAIN: "owncloud.com" → "baugpt.pro"
- APPLICATION_VENDOR: "ownCloud" → "BauGPT"
- APPLICATION_SHORTNAME: "ownCloud" → "BauGPT"
- APPLICATION_VIRTUALFILE_SUFFIX: "owncloud" → "baugpt"
- LINUX_PACKAGE_SHORTNAME: "owncloud" → "baugpt"
- APPLICATION_REV_DOMAIN: "com.owncloud" → "com.baugpt"
- Disabled auto-updater and crash reporter URLs (infrastructure not ready)
- Kept APPLICATION_ICON_NAME as "owncloud" for backwards compatibility

**Build System** (CMakeLists.txt):
- Make Sparkle dependency optional: only required when WITH_AUTO_UPDATER is enabled
- This allows building on macOS without Sparkle framework

**Verification**:
✓ Application builds successfully
✓ Binary correctly named: baugpt (not owncloud)
✓ All SVG files valid and appropriately sized
✓ Application launches and displays BauGPT branding
✓ All resource assets bundled correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,9 +110,9 @@ if(APPLE)
   set( SOCKETAPI_TEAM_IDENTIFIER_PREFIX "" CACHE STRING "SocketApi prefix (including a following dot) that must match the codesign key's TeamIdentifier/Organizational Unit" )
 endif()
 
-if(APPLE)
+if(APPLE AND WITH_AUTO_UPDATER)
     find_package(Sparkle REQUIRED)
-endif(APPLE)
+endif()
 
 if(WITH_APPIMAGEUPDATER)
     find_package(AppImageUpdate REQUIRED)
